add gen model: RELAX | FAST |TURBO

--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -13,7 +13,8 @@
       "CoreSize": 3,
       "QueueSize": 10,
       "MaxQueueSize": 100,
-      "TimeoutMinutes": 5
+      "TimeoutMinutes": 5,
+      "Mode": null // RELAX | FAST | TURBO 指定生成速度模式 --fast, --relax, or --turbo parameter at the end.
     },
     "NgDiscord": {
       "Server": "",
