--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -1,5 +1,6 @@
 {
-  "AuthToken": "", // 管理后台令牌 token
+  "UserToken": "", // 用户绘画令牌 token，可以用来访问绘画接口，可以不用设定
+  "AdminToken": "", // 管理后台令牌 token，可以用来访问绘画接口和管理员账号等功能
   "mj": {
     "AccountChooseRule": "", // BestWaitIdleRule
     "Discord": {
@@ -14,7 +15,8 @@
       "QueueSize": 10,
       "MaxQueueSize": 100,
       "TimeoutMinutes": 5,
-      "Mode": null // RELAX | FAST | TURBO 指定生成速度模式 --fast, --relax, or --turbo parameter at the end.
+      "Mode": null, // RELAX | FAST | TURBO 指定生成速度模式 --fast, --relax, or --turbo parameter at the end.
+      "Weight": 1
     },
     "NgDiscord": {
       "Server": "",
