--- a/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
+++ b/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
@@ -3,8 +3,13 @@
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<NoWarn>1701;1702;1591</NoWarn>
+	</PropertyGroup>
+	
 	<ItemGroup>
 		<PackageReference Include="IdGen" Version="3.0.7" />
 		<PackageReference Include="LiteDB" Version="5.0.20" />
@@ -32,10 +37,18 @@
 		<Content Remove="Resources\ApiParams\action.json" />
 		<Content Remove="Resources\ApiParams\zoom.json" />
 		<Content Remove="Resources\ApiParams\seed.json" />
+		<Content Remove="Resources\ApiParams\info.json" />
+		<Content Remove="Resources\ApiParams\setting.json" />
+		<Content Remove="Resources\ApiParams\settingbutton.json" />
+		<Content Remove="Resources\ApiParams\settingselect.json" />
 		<Content Remove="Resources\mime.types" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<EmbeddedResource Include="Resources\ApiParams\settingselect.json" />
+		<EmbeddedResource Include="Resources\ApiParams\settingbutton.json" />
+		<EmbeddedResource Include="Resources\ApiParams\setting.json" />
+		<EmbeddedResource Include="Resources\ApiParams\info.json" />
 		<EmbeddedResource Include="Resources\ApiParams\seed.json" />
 		<EmbeddedResource Include="Resources\ApiParams\zoom.json" />
 		<EmbeddedResource Include="Resources\ApiParams\reroll.json" />
