--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "Demo": true, // 网站配置为演示模式
   "UserToken": "", // 用户绘画令牌 token，可以用来访问绘画接口，可以不用设定
   "AdminToken": "", // 管理后台令牌 token，可以用来访问绘画接口和管理员账号等功能
   "mj": {
