--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "Demo": true, // 网站配置为演示模式
+  "Demo": null, // 网站配置为演示模式
   "UserToken": "", // 用户绘画令牌 token，可以用来访问绘画接口，可以不用设定
   "AdminToken": "", // 管理后台令牌 token，可以用来访问绘画接口和管理员账号等功能
   "mj": {
-    "AccountChooseRule": "", // BestWaitIdleRule
+    "AccountChooseRule": "BestWaitIdle", // BestWaitIdle | Random | Weight | Polling
     "Discord": {
       "GuildId": "125652671***",
       "ChannelId": "12565267***",
