--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -8,7 +8,7 @@
       "GuildId": "125652671***",
       "ChannelId": "12565267***",
       "PrivateChannelId": "1256495659***", // MJ 私信频道 ID，用来接受 seed 值
-      "nijiBotChannelId": "***", // NIJI 私信频道 ID，用来接受 seed 值
+      "nijiBotChannelId": "1261608644***", // NIJI 私信频道 ID，用来接受 seed 值
       "UserToken": "MTI1NjQ5N***",
       "BotToken": "MTI1NjUyODEy***",
       "UserAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36",
