--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -12,7 +12,7 @@
       "UserToken": "MTI1NjQ5N***",
       "BotToken": "MTI1NjUyODEy***",
       "UserAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36",
-      "Enable": true,
+      "Enable": false,
       "CoreSize": 3,
       "QueueSize": 10,
       "MaxQueueSize": 100,
@@ -80,5 +80,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "urls": "http://*:8086"
 }
