--- a/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
+++ b/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
@@ -46,15 +46,10 @@
 		<Content Remove="Resources\ApiParams\imagineniji.json" />
 		<Content Remove="Resources\ApiParams\blendniji.json" />
 		<Content Remove="Resources\ApiParams\describeniji.json" />
+		<Content Remove="Resources\ApiParams\seedniji.json" />
 		<Content Remove="Resources\mime.types" />
 	</ItemGroup>
 
-	<ItemGroup>
-	  <None Remove="Resources\ApiParams\seedniji.json" />
-	  <None Remove="WebSocketHandler.json" />
-	  <None Remove="WebSocketHandler.txt" />
-	  <None Remove="WebSocketStarter.json" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<EmbeddedResource Include="Resources\ApiParams\blendniji.json" />
@@ -86,6 +81,4 @@
 	  </None>
 	</ItemGroup>
 
-	<ProjectExtensions><VisualStudio><UserProperties resources_4apiparams_4info_1json__JsonSchema="https://raw.githubusercontent.com/DannyBen/bashly/master/schemas/strings.json" websocketstarter_1json__JsonSchema="https://alec016.github.io/Custom-Machinery/Json%20Schema/src/main/resources/schemas/custom_machinery_machine.json" /></VisualStudio></ProjectExtensions>
-	
 </Project>
