save to local, v2.6.1

--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -25,7 +25,8 @@
       "Cdn": "",
       "Wss": "",
       "ResumeWss": "",
-      "UploadServer": ""
+      "UploadServer": "",
+      "SaveToLocal": true // 是否开启图片保存到本地，如果开启则使用本地部署的地址，也可以同时配置 CDN 地址
     },
     "Proxy": {
       "Host": "",
