--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -26,7 +26,8 @@
       "Wss": "",
       "ResumeWss": "",
       "UploadServer": "",
-      "SaveToLocal": true // 是否开启图片保存到本地，如果开启则使用本地部署的地址，也可以同时配置 CDN 地址
+      "SaveToLocal": true, // 是否开启图片保存到本地，如果开启则使用本地部署的地址，也可以同时配置 CDN 地址
+      "CustomCdn": "" // 如果不填写，并且开启了保存到本地，则默认为根目录，建议填写自己的域名地址
     },
     "Proxy": {
       "Host": "",
