--- a/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
+++ b/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
@@ -24,6 +24,8 @@
 		<PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 		<PackageReference Include="UAParser" Version="3.1.47" />
+		<PackageReference Include="MailKit" Version="4.4.0" />
+		<PackageReference Include="MimeKit" Version="4.4.0" />
 	</ItemGroup>
 
 	<ItemGroup>
