cf captcha server

--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -58,7 +58,9 @@
       "FromEmail": "system@trueai.org", // 发件人邮箱地址
       "FromPassword": "", // 你的邮箱密码或应用专用密码
       "To": "" // 收件人
-    }
+    },
+    "CaptchaServer": "", // CF 验证服务器地址
+    "CaptchaNotifyHook": "" // CF 验证通知地址（验证通过后的回调通知，默认就是你的当前域名）
   },
   "Serilog": {
     "MinimumLevel": {
