--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -62,6 +62,57 @@
     "CaptchaServer": "", // CF 验证服务器地址
     "CaptchaNotifyHook": "" // CF 验证通知地址（验证通过后的回调通知，默认就是你的当前域名）
   },
+  // IP/IP 段 限流配置，可以用来限制某个 IP/IP 段 的访问频率
+  // 黑白名、白名单支持 IP 和 CIDR 格式 IP 段，例如：192.168.1.100、192.168.1.0/24
+  "IpRateLimiting": {
+    "Enable": false,
+    "Whitelist": [], // 永久白名单 "127.0.0.1", "::1/10", "::1"
+    "Blacklist": [], // 永久黑名单
+    "IpRules": {
+      "/": {
+        "1": 5,
+        "60": 20
+      },
+      "*/mj/*": {
+        "10": 10
+      }
+    },
+    "IpRangeRules": {
+      "/": {
+        "1": 5,
+        "60": 20
+      },
+      "*/mj/*": {
+        "10": 10
+      }
+    }
+  },
+  // IP 黑名单限流配置，触发后自动封锁 IP，支持封锁时间配置
+  // 黑白名、白名单支持 IP 和 CIDR 格式 IP 段，例如：192.168.1.100、192.168.1.0/24
+  "IpBlackRateLimiting": {
+    "Enable": false,
+    "Whitelist": [], // 永久白名单 "127.0.0.1", "::1/10", "::1"
+    "Blacklist": [], // 永久黑名单
+    "BlockTime": 1440, // 封锁时间，单位：分钟
+    "IpRules": {
+      "/": {
+        "1": 5,
+        "60": 20
+      },
+      "*/mj/*": {
+        "10": 10
+      }
+    },
+    "IpRangeRules": {
+      "/": {
+        "1": 5,
+        "60": 20
+      },
+      "*/mj/*": {
+        "10": 10
+      }
+    }
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
