--- a/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
+++ b/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
@@ -11,6 +11,7 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
+		<PackageReference Include="IPNetwork2" Version="3.0.667" />
 		<PackageReference Include="IdGen" Version="3.0.7" />
 		<PackageReference Include="LiteDB" Version="5.0.20" />
 		<PackageReference Include="RestSharp" Version="110.2.0" />
