--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -1,25 +1,11 @@
 {
+  // 提示：所有配置建议通过 GUI 配置
   "Demo": null, // 网站配置为演示模式
-  "UserToken": "", // 用户绘画令牌 token，可以用来访问绘画接口，可以不用设定
-  "AdminToken": "", // 管理后台令牌 token，可以用来访问绘画接口和管理员账号等功能
+  "UserToken": "", // （通过用户管理配置）用户绘画令牌 token，可以用来访问绘画接口，可以不用设定
+  "AdminToken": "", // （通过用户管理配置）管理后台令牌 token，可以用来访问绘画接口和管理员账号等功能
   "mj": {
     "AccountChooseRule": "BestWaitIdle", // BestWaitIdle | Random | Weight | Polling
-    "Discord": {
-      "GuildId": "125652671***",
-      "ChannelId": "12565267***",
-      "PrivateChannelId": "1256495659***", // MJ 私信频道 ID，用来接受 seed 值
-      "NijiBotChannelId": "1261608644***", // NIJI 私信频道 ID，用来接受 seed 值
-      "UserToken": "MTI1NjQ5N***",
-      "BotToken": "MTI1NjUyODEy***",
-      "UserAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36",
-      "Enable": false,
-      "CoreSize": 3,
-      "QueueSize": 10,
-      "MaxQueueSize": 100,
-      "TimeoutMinutes": 5,
-      "Mode": null, // RELAX | FAST | TURBO 指定生成速度模式 --fast, --relax, or --turbo parameter at the end.
-      "Weight": 1
-    },
+    "Discord": null, // 建议通过 GUI 配置
     "NgDiscord": {
       "Server": "",
       "Cdn": "",
@@ -46,8 +32,7 @@
       "MaxTokens": 2048,
       "Temperature": 0
     },
-    "TranslateWay": "NULL", // NULL | GTP | BAIDU
-    "ApiSecret": "", // your_api_secret
+    "TranslateWay": "NULL", // NULL | BAIDU
     "NotifyHook": "", // your_notify_hook
     "NotifyPoolSize": 10,
     "Smtp": {
