--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -28,11 +28,11 @@
       "GptApiUrl": "", // your_gpt_api_url
       "GptApiKey": "", // your_gpt_api_key
       "Timeout": "00:00:30",
-      "Model": "gpt-3.5-turbo",
+      "Model": "gpt-4o-mini",
       "MaxTokens": 2048,
       "Temperature": 0
     },
-    "TranslateWay": "NULL", // NULL | BAIDU
+    "TranslateWay": "NULL", // NULL | BAIDU | GPT
     "NotifyHook": "", // your_notify_hook
     "NotifyPoolSize": 10,
     "Smtp": {
