--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -25,7 +25,7 @@
       "AppSecret": "" // your_app_secret
     },
     "Openai": {
-      "GptApiUrl": "", // your_gpt_api_url
+      "GptApiUrl": "https://goapi.gptnb.ai/v1/chat/completions", // your_gpt_api_url
       "GptApiKey": "", // your_gpt_api_key
       "Timeout": "00:00:30",
       "Model": "gpt-4o-mini",
