--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -65,7 +65,7 @@
         "86400": 120 // 每天最多访问 120 次
       }
     },
-    "IpRangeRules": {
+    "Ip24Rules": {
       // 限制 mj/submit 接口下的所有接口
       "*/mj/submit/*": {
         "5": 10, // 每 5 秒 最多访问 10 次
@@ -90,7 +90,7 @@
         "60": 900
       }
     },
-    "IpRangeRules": {
+    "Ip24Rules": {
       "*/mj/*": {
         "1": 90,
         "60": 3000
