--- a/src/Midjourney.API/appsettings.json
+++ b/src/Midjourney.API/appsettings.json
@@ -4,6 +4,8 @@
   "UserToken": "", // （通过用户管理配置）用户绘画令牌 token，可以用来访问绘画接口，可以不用设定
   "AdminToken": "", // （通过用户管理配置）管理后台令牌 token，可以用来访问绘画接口和管理员账号等功能
   "mj": {
+    "MongoDefaultConnectionString": null, // MongoDB 连接字符串
+    "MongoDefaultDatabase": null, // MongoDB 数据库名称
     "AccountChooseRule": "BestWaitIdle", // BestWaitIdle | Random | Weight | Polling
     "Discord": null, // 建议通过 GUI 配置
     "NgDiscord": {
