--- a/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
+++ b/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
@@ -14,6 +14,11 @@
 		<PackageReference Include="IPNetwork2" Version="3.0.667" />
 		<PackageReference Include="IdGen" Version="3.0.7" />
 		<PackageReference Include="LiteDB" Version="5.0.20" />
+		<PackageReference Include="Mime-Detective" Version="24.7.1" />
+		<PackageReference Include="MimeTypes" Version="2.5.2">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="MongoDB.Driver" Version="2.28.0" />
 		<PackageReference Include="RestSharp" Version="110.2.0" />
 		<PackageReference Include="Discord.Net" Version="3.15.2" />
