--- a/src/Midjourney.Captcha.API/appsettings.json
+++ b/src/Midjourney.Captcha.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "Demo": null, // 网站配置为演示模式
   "Captcha": {
+    "Concurrent": 1, // 并发数
     "Headless": true, // 是否后台运行
     "TwoCaptchaKey": "" // 2captcha.com 的 API Key
   },
