--- a/src/Midjourney.Captcha.API/Midjourney.Captcha.API.csproj
+++ b/src/Midjourney.Captcha.API/Midjourney.Captcha.API.csproj
@@ -7,6 +7,7 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
 		<SatelliteResourceLanguages>zh</SatelliteResourceLanguages>
+		<EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
