--- a/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
+++ b/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
@@ -12,6 +12,13 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Aliyun.OSS.SDK.NetCore" Version="2.14.1" />
+		<PackageReference Include="FreeSql" Version="3.5.106" />
+		<PackageReference Include="FreeSql.Extensions.JsonMap" Version="3.5.106" />
+		<PackageReference Include="FreeSql.Extensions.Linq" Version="3.5.106" />
+		<PackageReference Include="FreeSql.Provider.MySqlConnector" Version="3.5.106" />
+		<PackageReference Include="FreeSql.Provider.PostgreSQL" Version="3.5.106" />
+		<PackageReference Include="FreeSql.Provider.Sqlite" Version="3.5.106" />
+		<PackageReference Include="FreeSql.Provider.SqlServer" Version="3.5.106" />
 		<PackageReference Include="IPNetwork2" Version="3.0.667" />
 		<PackageReference Include="IdGen" Version="3.0.7" />
 		<PackageReference Include="LiteDB" Version="5.0.21" />
