--- a/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
+++ b/src/Midjourney.Infrastructure/Midjourney.Infrastructure.csproj
@@ -11,13 +11,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\..\src\Midjourney.License\Midjourney.License.csproj" />
 	  <ProjectReference Include="..\Midjourney.Base\Midjourney.Base.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Reference Include="Midjourney.License">
-	    <HintPath>..\lib\Midjourney.License.dll</HintPath>
-	  </Reference>
 	</ItemGroup>
 
 </Project>
