--- a/src/Midjourney.Base/Midjourney.Base.csproj
+++ b/src/Midjourney.Base/Midjourney.Base.csproj
@@ -14,6 +14,8 @@
 		<PackageReference Include="Consul" Version="1.7.14.7" />
 		<PackageReference Include="CSRedisCore" Version="3.8.805" />
 		<PackageReference Include="FFMpegCore" Version="5.2.0" />
+		<PackageReference Include="FFMpegCore.Extensions.SkiaSharp" Version="5.0.2" />
+		<PackageReference Include="FFMpegCore.Extensions.System.Drawing.Common" Version="5.0.2" />
 		<PackageReference Include="Selenium.Support" Version="4.15.0" />
 		<PackageReference Include="Selenium.WebDriver" Version="4.15.0" />
 		<PackageReference Include="PuppeteerSharp" Version="18.0.4" />
@@ -51,6 +53,7 @@
 		<PackageReference Include="MailKit" Version="4.4.0" />
 		<PackageReference Include="MimeKit" Version="4.7.1" />
 		<PackageReference Include="AWSSDK.S3" Version="3.7.406.2" />
+		<PackageReference Include="Xabe.FFmpeg.Downloader" Version="6.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
