--- a/src/Midjourney.API/Midjourney.API.csproj
+++ b/src/Midjourney.API/Midjourney.API.csproj
@@ -9,7 +9,7 @@
 		<IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
 		<EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
 		<SatelliteResourceLanguages>zh-Hans</SatelliteResourceLanguages>
-		<AssemblyVersion>8.10.1</AssemblyVersion>
+		<AssemblyVersion>8.10.2</AssemblyVersion>
 		<DockerfileContext>..\..</DockerfileContext>
 	</PropertyGroup>
 
@@ -39,9 +39,11 @@
 	<!-- 开发时引用项目 -->
 	<!-- 发布时引用 DLL -->
 	<!--<ItemGroup Condition="'$(Configuration)' == 'Debug'">
+		<ProjectReference Include="..\Midjourney.Infrastructure\Midjourney.Infrastructure.csproj" />
 		<ProjectReference Include="..\..\..\src\Midjourney.License\Midjourney.License.csproj" />
 	</ItemGroup>
 	<ItemGroup Condition="'$(Configuration)' == 'Release'">
+		<ProjectReference Include="..\Midjourney.Infrastructure\Midjourney.Infrastructure.csproj" />
 		<Reference Include="Midjourney.License">
 			<HintPath>..\lib\Midjourney.License.dll</HintPath>
 		</Reference>
