--- a/src/Midjourney.API/Midjourney.API.csproj
+++ b/src/Midjourney.API/Midjourney.API.csproj
@@ -30,7 +30,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Midjourney.Infrastructure\Midjourney.Infrastructure.csproj" />
+		<ProjectReference Include="..\Midjourney.Services\Midjourney.Services.csproj" />
 		<Reference Include="Midjourney.License">
 			<HintPath>..\lib\Midjourney.License.dll</HintPath>
 		</Reference>
@@ -39,11 +39,11 @@
 	<!-- 开发时引用项目 -->
 	<!-- 发布时引用 DLL -->
 	<!--<ItemGroup Condition="'$(Configuration)' == 'Debug'">
-		<ProjectReference Include="..\Midjourney.Infrastructure\Midjourney.Infrastructure.csproj" />
+		<ProjectReference Include="..\Midjourney.Services\Midjourney.Services.csproj" />
 		<ProjectReference Include="..\..\..\src\Midjourney.License\Midjourney.License.csproj" />
 	</ItemGroup>
 	<ItemGroup Condition="'$(Configuration)' == 'Release'">
-		<ProjectReference Include="..\Midjourney.Infrastructure\Midjourney.Infrastructure.csproj" />
+		<ProjectReference Include="..\Midjourney.Services\Midjourney.Services.csproj" />
 		<Reference Include="Midjourney.License">
 			<HintPath>..\lib\Midjourney.License.dll</HintPath>
 		</Reference>
